update  GET/reviews/prevs/{id} and reviews filter
